# arledge

./: .coveragerc  .gitignore  .gitmodules  LICENSE  MINDMAP.md  README.md  ledger.beancount  ledger.db  main.py  mise.toml  pyproject.toml
.serena/: project.yml
chronicles/: 2026-03-01-accept-basedir.md  2026-03-01-basedir-support.md  2026-03-01-codebase-analysis-1.md  2026-03-01-codebase-analysis.md  2026-03-01-creditor-update.md  2026-03-01-docs-dbpath.md  2026-03-01-e2e-brat-tests.md  2026-03-01-e2e-helper-rename.md  2026-03-01-e2e-readme.md  2026-03-01-fix-ci-yamllint.md  2026-03-01-fix-dbpath-compat.md  2026-03-01-fix-mutable-defaults.md  2026-03-01-help-basedir.md  2026-03-01-init-beancount.md  2026-03-01-invoice-seq.md  2026-03-01-prioritized-findings.md  2026-03-01-qa-session.md  2026-03-01-remove-sqlite.md  2026-03-01-rename-cli-to-arledge.md  2026-03-01-spike-custom.md  2026-03-01-spike-invoice-parsing.md  2026-03-01-update-coverage-threshold.md  2026-03-01-update-customer-invoice.md  2026-03-01-use-uv-in-ci.md  2026-03-01-validate-github-action-ci.md
docs/: BEANCOUNT_REPLACEMENT_PLAN.md  IMPROVEMENTS_CHECKLIST.md  beancount.md  mise.md
includes/: creditors.beancount  customers.beancount
ledger/: cli.py  config.py  db.py  mcp_server.py  migrations.py  models.py
qa/: creditor.json  customer.json  customers.json  export.out  invoice-1.json  invoice.json  ledger.beancount  out-inv1.json  payment_account.json
script/: test-e2e
tests/: test_additional_coverage.py  test_beancount_spike_more.py  test_cli_all_json_outputs.py  test_cli_empty_and_schemas.py  test_cli_empty_lists.py  test_cli_errors_and_accounts.py  test_cli_file_errors.py  test_cli_json_output.py  test_cli_mcp.py  test_cli_more.py  test_config.py  test_creditor.py  test_db_operations.py  test_db_path_resolution.py  test_force_coverage.py  test_invoice_allocate.py  test_invoice_seq.py  test_misc_uncovered.py  test_more_branches.py  (+10 more)
(+50 files in other folders)
