[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "arledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beancount>=3.2.0",
    "beanquery>=0.2.0",
    "build>=1.4.0",
    "click>=8.3.1",
    "hypothesis>=6.151.4",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "setuptools>=80.10.2",
    "wheel>=0.46.3",
]

[project.scripts]
ledger = "ledger.cli:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=ledger --cov-report=xml:coverage.xml --cov-report=html:htmlcov --cov-fail-under=75"
testpaths = [
    "tests",
    "integration",
]

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "pytest-cov>=7.0.0",
]
